adds set id to data & recurring fate token + packs
